# voxel_world

./: Cargo.toml
src/: main.rs  noise.rs  voxel.rs
src/noise/: basic_perlin.rs  perlin.rs  random_perlin.rs
src/voxel/: block.rs  chunk.rs  mesh.rs  world.rs
