[package]
name = "pcg_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.1"
bevy_flycam = "*"
image = "0.25.1"
rand = "0.8.5"
lazy_static = "1.4.0"
noise = "0.9.0"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

